@@ -18,7 +18,7 @@ hadoop-common.version=3.3.6
 hadoop-hdfs.version=3.3.6
 hadoop-mapreduce.version=3.3.6
 
-accumulo.version=1.6.0
+accumulo.version=1.10.4
 netty.version=3.10.6.Final
 codahale.metrics-core.version=3.0.1
 netty-all.version=4.1.77.Final
