@@ -23,9 +23,9 @@ import java.io.DataOutputStream;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
-import org.apache.accumulo.core.Constants;
 import org.apache.pig.LoadStoreCaster;
 import org.apache.pig.ResourceSchema.ResourceFieldSchema;
 import org.apache.pig.backend.executionengine.ExecException;
@@ -83,7 +83,7 @@ public class AccumuloBinaryConverter implements LoadStoreCaster {
 
     @Override
     public String bytesToCharArray(byte[] b) throws IOException {
-        return new String(b, Constants.UTF8);
+        return new String(b, StandardCharsets.UTF_8);
     }
 
     /**
@@ -91,7 +91,7 @@ public class AccumuloBinaryConverter implements LoadStoreCaster {
      */
     @Override
     public DateTime bytesToDateTime(byte[] b) throws IOException {
-        String s = new String(b, Constants.UTF8);
+        String s = new String(b, StandardCharsets.UTF_8);
         return DateTime.parse(s);
     }
 
@@ -202,7 +202,7 @@ public class AccumuloBinaryConverter implements LoadStoreCaster {
 
     @Override
     public byte[] toBytes(DateTime dt) throws IOException {
-        return dt.toString().getBytes(Constants.UTF8);
+        return dt.toString().getBytes(StandardCharsets.UTF_8);
     }
 
     @Override
@@ -249,7 +249,7 @@ public class AccumuloBinaryConverter implements LoadStoreCaster {
 
     @Override
     public byte[] toBytes(String s) throws IOException {
-        return s.getBytes(Constants.UTF8);
+        return s.getBytes(StandardCharsets.UTF_8);
     }
 
     /**
