@@ -23,6 +23,8 @@ Trunk (unreleased changes)
 INCOMPATIBLE CHANGES
  
 IMPROVEMENTS
+PIG-5420: Update accumulo dependency to 1.10.4 (knoguchi)
+
 PIG-5462: Always update Owasp version to latest (knoguchi)
 
 PIG-5461: E2E environment variables ignored (knoguchi)
